--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,26 +1,33 @@
 <div class="main">
   <div class="card">
-    <div class="progress" [style.opacity]="1"><div class="indeterminate"></div></div>
+    <div class="progress" [style.opacity]="(items$ | async) ? 0 : 1">
+      <div class="indeterminate"></div>
+    </div>
     <div class="card-content"><h1>Anime Videos</h1></div>
     <div class="card-search">
-      <div class="token">SEARCH</div>
+      <input type="text" [formControl]="searchControl" />
     </div>
     <div class="card-content">
       <ul class="collection">
-        <li class="collection-item" *ngFor="let item of [1, 2, 3, 4, 5]">
-          <div class="placeholder">
-            <div class="image"></div>
-            <div class="content">
-              <div class="title"></div>
-              <div class="description"></div>
-              <div class="description"></div>
-            </div>
-          </div>
-        </li>
+        <ng-container
+          *ngIf="(items$ | async)?.videos as videos; else empty_card"
+        >
+          <li class="collection-item" *ngFor="let video of videos">
+            <app-video [cardData]="video"></app-video>
+          </li>
+        </ng-container>
+        <ng-template #empty_card>
+          <li class="collection-item" *ngFor="let item of emptyArray">
+            <app-empty-card></app-empty-card>
+          </li>
+        </ng-template>
       </ul>
     </div>
     <div class="card-footer">
-      <div class="token">PAGINATION</div>
+      <app-pagination
+        [pageInfo]="(items$ | async)?.pageInfo || inintialPageInfo"
+        (changePage)="getSearch($event)"
+      ></app-pagination>
     </div>
   </div>
 </div>
