--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -19,38 +19,8 @@
   justify-content: center;
 }
 
-.placeholder {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-
-  .image {
-    width: 48px;
-    height: 64px;
-    background-color: #EEEEEE;
-    margin-right: 16px;
-  }
-
-  .content {
-    flex: 1;
-    padding: 0;
-
-    .title {
-      height: 12px;
-      background-color: #EEEEEE;
-      max-width: 240px;
-    }
-
-    .description {
-      height: 8px;
-      background-color: #EEEEEE;
-      margin-top: 6px;
-    }
-  }
-}
-
 .card-search {
-  background-color: #F5F5F5;
+  background-color: #f5f5f5;
   padding: 8px 24px;
   border-top: 1px solid rgba(160, 160, 160, 0.2);
   border-bottom: 1px solid rgba(160, 160, 160, 0.2);
@@ -84,7 +54,7 @@ h1 {
 
 .token {
   background-color: #2b73f0;
-  color: #FFFFFF;
+  color: #ffffff;
   padding: 4px 12px;
   border-radius: 3px;
   flex: 1;
